<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivityCalculator">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="267dp"
        android:layout_height="207dp"
        android:contentDescription="@string/buttons_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/button_0_description"
                android:text="@string/button_0"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/button_1_description"
                android:text="@string/button_1"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/button_2_description"
                android:text="@string/button_2"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/button_3_description"
                android:text="@string/button_3"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/button_4_description"
                android:text="@string/button_4"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/button_5_description"
                android:text="@string/button_5"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/button_6_description"
                android:text="@string/button_6"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/button_7_description"
                android:text="@string/button_7"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/button_8_description"
                android:text="@string/button_8"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:contentDescription="@string/button_9_description"
                android:text="@string/button_9"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_equal_and_plus"
                android:contentDescription="@string/button_plus_description"
                android:text="@string/button_plus"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/equalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_equal_and_plus"
                android:contentDescription="@string/button_equal_description"
                android:text="@string/button_equal"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/leftOperand"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <TextView
        android:id="@+id/operationText"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/empty"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <TextView
        android:id="@+id/rightOperand"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/eraseButton"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/button_exit_and_erase"
        android:text="@string/button_erase"
        android:contentDescription="@string/button_erase_description"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_exit"
        android:contentDescription="@string/button_exit_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        tools:ignore="MissingConstraints"
        android:textColor="@color/black"
        android:backgroundTint="@color/button_exit_and_erase"
        android:textSize="18sp"/>

    <GridLayout
        android:id="@+id/resultPictures"
        android:layout_width="366dp"
        android:layout_height="256dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/gridlayout_black_border"
        android:columnCount="3"
        android:orientation="horizontal"
        android:padding="1dp"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="161dp"
        android:contentDescription="@string/candies_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/candies_vertical"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>

